--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-APP_ENV=local
+APP_ENV=production
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=0vJnSGwVIi9wOrrtKisenE02dC4nczIl
 
-DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_HOST=159.203.122.107
+DB_DATABASE=ytyxuuesup
+DB_USERNAME=ytyxuuesup
+DB_PASSWORD=hUM5gzsjDa
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
